finished checking for overlap and made tests for methods